force-app/main/default/objects/Contract_Contact_Role__c/Contract_Contact_Role__c.object-meta.xml
<CustomObject>
    <description>Track the role a person has in relation to a contact.</description>
    <label>Contract Contact Rol</label>
    <nameField>
        <displayFormat>CCR-{000000000}</displayFormat>
        <label>Contract Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Contact Rollen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>