force-app/main/default/objects/Contract_Contact_Role__c/fields/Active_Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Line__c</fullName>
    <description>This checkbox is selected when the related contract line is marked as active.</description>
    <formula>Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This checkbox is selected when the related contract line is marked as active.</inlineHelpText>
    <label>Active Contract Line</label>
    <type>Checkbox</type>
</CustomField>