force-app/main/default/objects/Contract_Contact_Role__c/fields/Contact_Account__c.field-meta.xml
<CustomField>
    <fullName>Contact_Account__c</fullName>
    <description>Contact side of the relation. Can be a person account too</description>
    <inlineHelpText>Contact side of the relation. Can be a person account too</inlineHelpText>
    <label>Contact Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Contract_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>