force-app/main/default/objects/Contract_Contact_Role__c/fields/Contract_Line__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Role applies to this contract line</description>
    <label>Contract Line</label>
    <referenceTo>Contract_Line__c</referenceTo>
    <relationshipName>Contract_Contact_Rollen</relationshipName>
    <type>Lookup</type>
</CustomField>