force-app/main/default/objects/Contract_Contact_Role__c/fields/Deduplication_Key__c.field-meta.xml
<CustomField>
    <fullName>Deduplication_Key__c</fullName>
    <description>To make sure we will not get duplicate records</description>
    <externalId>true</externalId>
    <inlineHelpText>Om te voorkomen dat we dubbele record krijgen.</inlineHelpText>
    <label>Deduplication Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>