force-app/main/default/objects/Contract_Contact_Role__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date for this contract role</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>