force-app/main/default/objects/Contract_Contact_Role__c/fields/Real_Estate_Contract__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Contract this role applies to</description>
    <label>Real Estate Contract</label>
    <referenceTo>Real_Estate_Contract__c</referenceTo>
    <relationshipName>Contract_Contact_Rollen</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>