force-app/main/default/objects/Contract_Contact_Role__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Start date for this contract role</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>